--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ DATABASE_URL=postgres://username:password@localhost:5432/scrawl
 REDIS_URL=localhost:6379
 REDIS_USER=
 REDIS_PWD=
+EMAIL=assignexpertapp@gmail.com
+EMAIL_PWD=auwwabyfqqhgftud
