--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "nodemailer": "^6.7.8",
     "pg": "^8.7.3",
     "redis": "^4.2.0",
     "uuid": "^8.3.2"
@@ -37,6 +38,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.1",
+    "@types/nodemailer": "^6.4.5",
     "@types/pg": "^8.6.5",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
