--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bullmq": "^1.89.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
+    "exceljs": "^4.3.0",
     "express": "^4.18.1",
     "nodemailer": "^6.7.8",
     "pg": "^8.7.3",
