--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bullmq": "^1.89.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "exceljs": "^4.3.0",
     "express": "^4.18.1",
     "nodemailer": "^6.7.8",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
+    "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.1",
@@ -46,6 +48,7 @@
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "apidoc": "^0.52.0",
     "copyfiles": "^2.4.1",
+    "ejs-lint": "^1.2.2",
     "eslint": "^8.20.0",
     "jest": "^28.1.3",
     "prettier": "^2.7.1",
